// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OrderAddComponent should save 1`] = `
{
  "billToAddress": {
    "billToOrders": [],
    "city": "CITY",
    "countryRegion": "COUNTRY_REGION",
    "id": "ID",
    "line1": "LINE_1",
    "line2": "LINE_2",
    "postalCode": "POSTAL_CODE",
    "shipToOrders": [],
    "stateProvince": "STATE_PROVINCE",
  },
  "billToAddressId": "BILL_TO_ADDRESS_ID",
  "comment": "COMMENT",
  "creditCardApprovalCode": "CREDIT_CARD_APP",
  "customer": {
    "companyName": "COMPANY_NAME",
    "customerAddresses": [],
    "emailAddress": "EMAIL_ADDRESS",
    "id": "ID",
    "name": "NAME",
    "num": "NUM_NUM_NUM_NUM",
    "orders": [],
    "phone": "PHONE",
    "salesAgent": {
      "customers": [],
      "id": 0,
      "loginId": "LOGIN_ID",
      "name": "NAME",
    },
    "salesAgentId": 0,
  },
  "customerId": "CUSTOMER_ID",
  "date": Any<Date>,
  "dueDate": Any<Date>,
  "freight": 0,
  "id": undefined,
  "isOnlineOrder": false,
  "num": "NUM",
  "orderId": 0,
  "orderLineItems": [],
  "purchaseOrderNum": "PURCHASE_ORDER_NUM",
  "revisionNum": 0,
  "shipDate": Any<Date>,
  "shipToAddress": {
    "billToOrders": [],
    "city": "CITY",
    "countryRegion": "COUNTRY_REGION",
    "id": "ID",
    "line1": "LINE_1",
    "line2": "LINE_2",
    "postalCode": "POSTAL_CODE",
    "shipToOrders": [],
    "stateProvince": "STATE_PROVINCE",
  },
  "shipToAddressId": "SHIP_TO_ADDRESS_ID",
  "shippingType": 1,
  "statusType": 0,
  "subTotal": 0,
  "taxAmt": 0,
  "totalDue": 0,
}
`;

exports[`OrderEditComponent should update 1`] = `
{
  "billToAddress": {
    "billToOrders": [],
    "city": "CITY",
    "countryRegion": "COUNTRY_REGION",
    "id": "ID",
    "line1": "LINE_1",
    "line2": "LINE_2",
    "postalCode": "POSTAL_CODE",
    "shipToOrders": [],
    "stateProvince": "STATE_PROVINCE",
  },
  "billToAddressId": "BILL_TO_ADDRESS_ID",
  "comment": "COMMENT",
  "creditCardApprovalCode": "CREDIT_CARD_APP",
  "customer": {
    "companyName": "COMPANY_NAME",
    "customerAddresses": [],
    "emailAddress": "EMAIL_ADDRESS",
    "id": "ID",
    "name": "NAME",
    "num": "NUM_NUM_NUM_NUM",
    "orders": [],
    "phone": "PHONE",
    "salesAgent": {
      "customers": [],
      "id": 0,
      "loginId": "LOGIN_ID",
      "name": "NAME",
    },
    "salesAgentId": 0,
  },
  "customerId": "CUSTOMER_ID",
  "date": Any<Date>,
  "dueDate": Any<Date>,
  "freight": 0,
  "id": "ID",
  "isOnlineOrder": false,
  "num": "NUM",
  "orderId": 0,
  "orderLineItems": [],
  "purchaseOrderNum": "PURCHASE_ORDER_NUM",
  "revisionNum": 0,
  "shipDate": Any<Date>,
  "shipToAddress": {
    "billToOrders": [],
    "city": "CITY",
    "countryRegion": "COUNTRY_REGION",
    "id": "ID",
    "line1": "LINE_1",
    "line2": "LINE_2",
    "postalCode": "POSTAL_CODE",
    "shipToOrders": [],
    "stateProvince": "STATE_PROVINCE",
  },
  "shipToAddressId": "SHIP_TO_ADDRESS_ID",
  "shippingType": 1,
  "statusType": 0,
  "subTotal": 0,
  "taxAmt": 0,
  "totalDue": 0,
}
`;
